[metadata]
description-file = README.md

[flake8]
# List of errors and warnings:
#   http://flake8.readthedocs.org/en/latest/warnings.html
# Things we ignore:
#   E111 indentation is not a multiple of four
#   E121 continuation line indentation is not a multiple of four
#   E125 continuation line does not distinguish itself from next logical line
#   E129 visually indented line with same indent as next logical line
#   E702 multiple statements on one line (semicolon)
ignore = E111,E121,E125,E129,E702
max-line-length = 80
